css/index.css
:root {
    --lyrene-main-bg: #1e242b;
    --lyrene-img-bg: #3d4650;
    --lyrene-dot-1: #FF9FB2;
    --lyrene-dot-2: #FBDCE2;
    --lyrene-dot-3: #A89F68;
    --lyrene-dot-4: #80637d;
    --lyrene-dot-5: #68676f;
}
* {
    font-family: "Segoe UI", "Microsoft JhengHei", sans-serif;
}
body {
    background-color: var(--lyrene-main-bg, lightslategray);
}
.header {
    position: fixed;
    z-index: 99;
    width: 100%;
    height: 65px;
    padding: 10px;
    text-align: center;
    background-color: var(--lyrene-main-bg);
    opacity: .8;
    display: none;
}
.header>img {
    width: auto;
    height: 45px;
    filter: invert(1);
}
.index-container {
    position: relative;
    display: var(--flex, flex);
    flex-flow: row;
    background-color: var(--lyrene-main-bg, lightslategray);
    width: var(--vw, 100vw);
    height: var(--vh, 100vh);
    overflow: hidden;
}
/* GROUP: left */
    .index-left {
        flex: 1;
        display: flex;
        justify-content: center;
    }
    .index-left .left-child:nth-child(n) {
        position: relative;
        z-index: 0;
        flex: 1;
        display: flex;
        flex-flow: column;
        margin: 0 3%;
        box-shadow: inset 0 0 1px #1e242b;
        background-size: 10px 10px;
        background-repeat: repeat;
        max-width: 200px;
        height: 80%;
        color: white;
        text-align: center;
        font-size: 35px;
        font-weight: bold;
        text-shadow: 3px 3px 3px var(--lyrene-main-bg, #FF9FB2);
        -webkit-writing-mode: vertical-lr;
        writing-mode: vertical-lr;
        letter-spacing: 1rem;
        -webkit-user-select: none;
        -moz-user-select: none;
        cursor: pointer;
        opacity: 0;
        transition: all 1.5s;
    }
    .index-left .left-child:nth-child(odd) {
        align-self: flex-start;
        align-items: flex-start;
        padding-top: 2rem;
        transform: translateY(-100vh);
    }
    .index-left .left-child:nth-child(even) {
        align-self: flex-end;
        align-items: flex-end;
        padding-bottom: 2rem;
        transform: translateY(100vh);
    }
    .index-left .left-child:nth-child(1) {
        background-image: linear-gradient(-45deg, var(--lyrene-dot-1, #FF9FB2) 25%, transparent 25%, transparent 50%, var(--lyrene-dot-1, #FF9FB2) 50%, var(--lyrene-dot-1, #FF9FB2) 75%, transparent 75%, transparent);
    }
    .index-left .left-child:nth-child(2) {
        background-image: linear-gradient(-45deg, var(--lyrene-dot-2, #FF9FB2) 25%, transparent 25%, transparent 50%, var(--lyrene-dot-2, #FF9FB2) 50%, var(--lyrene-dot-2, #FF9FB2) 75%, transparent 75%, transparent);
    }
    .index-left .left-child:nth-child(3) {
        background-image: linear-gradient(-45deg, var(--lyrene-dot-3, #FF9FB2) 25%, transparent 25%, transparent 50%, var(--lyrene-dot-3, #FF9FB2) 50%, var(--lyrene-dot-3, #FF9FB2) 75%, transparent 75%, transparent);
    }
    .index-left .left-child:nth-child(4) {
        background-image: linear-gradient(-45deg, var(--lyrene-dot-4, #FF9FB2) 25%, transparent 25%, transparent 50%, var(--lyrene-dot-4, #FF9FB2) 50%, var(--lyrene-dot-4, #FF9FB2) 75%, transparent 75%, transparent);
    }
    .index-left .left-child:nth-child(n)::after {
        content: "";
        position: absolute;
        z-index: 1;
    }
    .main-btn-1::after {
        bottom: -10px;
        left: -10px;
        border-color: transparent var(--lyrene-main-bg, #FF9FB2) transparent transparent;
        border-style: solid solid solid solid;
        border-width: 150px 250px 0 0;
        width: 250px;
    }
    .main-btn-2::after {
        top: -10px;
        left: -10px;
        border-color: var(--lyrene-main-bg, #FF9FB2) transparent transparent transparent;
        border-style: solid solid solid solid;
        border-width: 150px 250px 0 0;
        width: 250px;
    }
    .main-btn-3::after {
        bottom: -10px;
        left: -10px;
        border-color: transparent transparent var(--lyrene-main-bg, #FF9FB2) transparent;
        border-style: solid solid solid solid;
        border-width: 0 250px 150px 0;
        width: 250px;
    }
    .main-btn-4::after {
        top: -10px;
        left: -10px;
        border-color: transparent var(--lyrene-main-bg, #FF9FB2) transparent transparent;
        border-style: solid solid solid solid;
        border-width: 0 250px 150px 0;
        width: 250px;
    }
    .left-child :nth-child(n) {
        flex: 1;
    }
    .left-child .btn-t-en {
        flex: .7;
        font-size: 20px;
        letter-spacing: 5px;
    }
/* GROUP: right */
    .index-right {
        flex: none;
        display: flex;
        flex-flow: column;
        padding: 1rem;
        width: 30%;
        min-width: 300px;
        transform: translateY(-100vh);
        transition: all 1s;
    }
    .title-container {
        width: 100%;
        padding: 1rem;
    }
    .title-container>img {
        width: 100%;
        height: auto;
        filter: invert(1);
    }
    .swiper-container {
        position: relative;
        display: flex;
        align-items: center;
        justify-content: center;
        background-color: var(--lyrene-img-bg);
        width: 100%;
        height: 100%;
        text-align: center;
        overflow: hidden;
    }
    .swiper-container::before {
        content: "";
        position: absolute;
        z-index: 1;
        top: 5px;
        left: 5px;
        width: calc(100% - 10px);
        height: calc(100% - 10px);
        border: solid 3px var(--lyrene-main-bg);
    }
    .swiper-container>img {
        position: absolute;
        margin: auto;
        top: 0;
        width: auto;
        height: 100%;
    }
/* GROUP: dot */
    .index-img-page-dot {
        flex: none;
        flex-flow: column;
        display: flex;
        width: 15px;
    }
    .index-img-page-dot :nth-child(n) {
        flex: 1;
        width: 100%;
        cursor: pointer;
        transition: all 300ms;
    }
    .page-dot-chosen {
        background-image: linear-gradient(-45deg, white 25%, transparent 25%, transparent 50%, white 50%, white 75%, transparent 75%, transparent);
        background-size: 5px 5px;
        background-repeat: repeat;
        box-shadow: inset 0 0 0 2px white;
    }
/* GROUP: others */
    .swiper-container .error-img {
        width: 50px;
        height: 50px;
        top: calc(50% - 25px);
    }

@media screen and (max-width: 767px) {
    .index-container {
        flex-flow: column-reverse;
        padding-top: 65px;
    }
    .index-left {
        flex-flow: column;
    }
    .index-left .left-child:nth-child(n) {
        margin: 3% 0;
        width: 85%;
        height: auto;
        max-width: none;
        max-height: 100px;
        -webkit-writing-mode: inherit;
        writing-mode: inherit;
    }
    .index-left .left-child:nth-child(odd) {
        align-items: center;
        padding-top: 0;
        padding-left: 1rem;
        transform: translateY(100vh);
    }
    .index-left .left-child:nth-child(even) {
        align-items: center;
        padding-bottom: 0;
        padding-right: 1rem;
        transform: translateY(100vh);
    }
    .main-btn-1::after {
        bottom: 0;
        right: 0;
        left: auto;
        border-color: transparent var(--lyrene-main-bg, #FF9FB2) transparent transparent;
        border-style: solid solid solid solid;
        border-width: 100px 50px 0 0;
        width: 50px;
    }
    .main-btn-2::after {
        bottom: 0;
        left: 0;
        right: auto;
        border-color: var(--lyrene-main-bg, #FF9FB2) transparent transparent transparent;
        border-style: solid solid solid solid;
        border-width: 100px 50px 0 0;
        width: 50px;
    }
    .main-btn-3::after {
        bottom: 0;
        right: 0;
        left: auto;
        border-color: transparent var(--lyrene-main-bg, #FF9FB2) transparent transparent;
        border-style: solid solid solid solid;
        border-width: 0 50px 100px 0;
        width: 50px;
    }
    .main-btn-4::after {
        bottom: 0;
        left: 0;
        right: auto;
        border-color: transparent transparent var(--lyrene-main-bg, #FF9FB2) transparent;
        border-style: solid solid solid solid;
        border-width: 0 50px 100px 0;
        width: 50px;
    }
    .index-right {
        flex: .7;
        padding: 0;
        width: 100%;
    }
    .swiper-container>img {
        left: 0;
        right: 0;
        bottom: 0;
        width: 100%;
        height: auto;
    }
    .index-img-page-dot {
        z-index: 10;
        flex-flow: row;
        width: 100%;
        height: 15px;
    }
    .title-container {
        display: none;
    }
    .swiper-container .error-img {
        top: 0;
        left: 0;
    }
    .header {
        display: block;
    }
}

